deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-python-app
  labels:
    app: sample-python-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-python-app
  template:
    metadata:
      labels:
        app: sample-python-app
    spec:
      containers:
      - name: python-app
        image: reehanruhullah/dataphion_prac:0.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
          - name: db-connection
            mountPath: /opt
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: regcred
      volumes:
      - name: db-connection
        configMap:
          name: test-cm
