service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python
spec:
  type: NodePort
  selector:
    app:  sample-python-app
  ports:
    - port: 80 
      targetPort: 8000
      nodePort: 30007
